test/tests/stages/18_structures/invalid_parse/extra_credit/union_empty_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(x)
  =
  {
  }
  ;
  }
